--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <title>生日快乐!</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -14,40 +14,47 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
-        <span id="name">Lydia</span>
+      <h1 class="one">
+        <span id="name">我亲爱的滴小🐳</span>
       </h1>
-      <p class="two" id="greetingText">I really like your name btw!</p>
+      <p class="two" id="greetingText">生日快乐啦</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>
+        今年鸽了你的生日礼物
+        <br>
+        那就送点不一样的
+      </p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
-        <p class="fake-btn">Send</p>
+        <p class="hbd-chatbox">怎么给女朋友送生日惊喜</p>
+        <p class="fake-btn">百度一下</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
-        <span>:)</span>
+      <p class="idea-1">尝试过这么找</p>
+      <p class="idea-2">但找到的都是卖货的广告！</p>
+      <p class="idea-3">左思右想只能整点烂活啦
+        <strong>上才艺！</strong></p>
+      <p class="idea-4">肉麻的话还是想不太出来
+      <br>
+        干脆展示一下摸鱼的学习成果吧
+      </p>
+      <p class="idea-5">先复刻一下你刚才的表情
+        <span>:(</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>烂活</span>
+        <span>来咯</span>
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/pic.png" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">谁不喜欢各种颜色头发的妹妹呢</h3>
+        <h5 id="wishText">希望小🐳新的一年里染发不会掉色</h5>
       </div>
     </div>
     <div class="seven">
@@ -117,9 +124,9 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
-      <p class="last-smile">:)</p>
+      <p>最后给打一个欠条，2021年11月3日，欠小🐳一个生日礼物，明年补上</p>
+      <p id="replay">要是还不开心就再看一遍！</p>
+      <p class="last-smile">：)</p>
     </div>
   </div>
 </body>
