--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span id="name">我亲爱的滴小🐳</span>
+        <span id="name">我亲爱滴小🐳</span>
       </h1>
       <p class="two" id="greetingText">生日快乐啦</p>
     </div>
     <div class="three">
       <p>
-        今年鸽了你的生日礼物
+        今年鸽了你的
         <br>
-        那就送点不一样的
+        生日礼物
+        <br>
+        那就来点
+        <br>
+        不一样的
       </p>
     </div>
     <div class="four">
@@ -34,12 +38,16 @@
     </div>
     <div class="five">
       <p class="idea-1">尝试过这么找</p>
-      <p class="idea-2">但找到的都是卖货的广告！</p>
-      <p class="idea-3">左思右想只能整点烂活啦
+      <p class="idea-2">但全是卖货的广告！</p>
+      <p class="idea-3">左思右想只能整点烂活
         <strong>上才艺！</strong></p>
-      <p class="idea-4">肉麻的话还是想不太出来
+      <p class="idea-4">肉麻的话
+        <br>
+        想不太出来
       <br>
-        干脆展示一下摸鱼的学习成果吧
+        干脆展示一下
+        <br>
+        摸鱼的学习成果吧
       </p>
       <p class="idea-5">先复刻一下你刚才的表情
         <span>:(</span>
@@ -124,8 +132,11 @@
       </svg>
     </div>
     <div class="nine">
-      <p>最后给打一个欠条，2021年11月3日，欠小🐳一个生日礼物，明年补上</p>
-      <p id="replay">要是还不开心就再看一遍！</p>
+      <p>没想到吧，这其实是个欠条
+        <br>
+        2021年11月3日，小🐔欠小🐳一个生日礼物，明年补上</p>
+      <p>这个网站应该会一直保存，记得来要债哦</p>
+      <p id="replay">点👴再看一遍！</p>
       <p class="last-smile">：)</p>
     </div>
   </div>
